@@ -1,7 +1,16 @@
-2003-09-09  Martin Fuchs	<martin-fuchs@gmx.net>
+2003-08-09  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* lib/user32/windows/dialog.c (GetDlgItemInt): Fix unsigned/signed
+	warning.
+	* lib/user32/windows/menu.c (IsMenu): Ditto.
+	* lib/user32/windows/messagebox.c (MSGBOX_OnInit): Ditto.
+	* ntoskrnl/mm/ppool.c: Ditto.
+
+2003-08-09  Martin Fuchs	<martin-fuchs@gmx.net>
 	
 	* include/func.h: added GetShellWindow()
-	* lib/user32/misc/desktop.c: implemented GetShellWindow(), SetShellWindow() and SetShellWindowEx().
+	* lib/user32/misc/desktop.c: implemented GetShellWindow(),
+	SetShellWindow() and SetShellWindowEx().
 	* lib/user32/user32.def: Ditto.
 	* lib/user32/user32.edf: Ditto.
 
